@@ -6,6 +6,9 @@ Change History
 1.5 (unreleased)
 ================
 
+- Add an XML walker source section for walking a tree of elements.
+  [rpatterson]
+
 - Add a list source section for adding recursion to pipelines.
   [rpatterson]
 
